--- a/style.css
+++ b/style.css
@@ -1,11 +1,22 @@
 @charset "utf-8";
 
+@font-face {
+    font-family: 'ghost' ;
+    src:  url('Ghost\ Shadow.ttf'),format('truetype'), url('Shadow.ttf'),format('truetype');
+}
+
 .container{
     background-color: rgb(158, 140, 140);
     display: flex;
     flex-direction: row;
     gap: 20px;
     justify-content: center;
+    
+}
+body{
+    background-image: url("R.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 a:hover{
     text-decoration:dashed;
@@ -13,4 +24,19 @@ a:hover{
 }
 h1{
     text-align: center;
+    color: rgb(1, 80, 145);
+    font-family:'Shadow', sans-serif;
+    
+    
+}
+p{
+    padding: 5%;
+    line-height: 30px;
+    border-radius: 5px;
+    color: wheat;
+
+}
+.tituloss  {
+    color: white;
+    text-indent: 90px;
 }
