--- a/style.css
+++ b/style.css
@@ -3,13 +3,19 @@
 @font-face {
     font-family: 'ghost' ;
     src:  url('Ghost\ Shadow.ttf'),format('truetype'), url('Shadow.ttf'),format('truetype');
+
 }
 
+*{
+    padding: 20px;
+    
+}
 .container{
     display:flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 60px;
     justify-content: center;
+    font-size: 20px;
 
     
 }
@@ -19,15 +25,15 @@ body{
     background-size: cover;
 }
 a:hover{
-    text-decoration:overline;
+    text-decoration:double;
     color: rgba(255, 255, 255, 0.459);
-    font-style: italic;
+    font-style: oblique;
     
     
 }
 h1{
     text-align: center;
-    color: rgb(1, 80, 145);
+    color: rgb(37, 140, 224);
     font-family:'Shadow', sans-serif;
     font-size: 60px;
     
@@ -37,7 +43,7 @@ p{
     padding: 5%;
     line-height: 30px;
     border-radius: 5px;
-    color: wheat;
+    color: rgb(226, 166, 56);
 
 }
 .tituloss  {
